// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should compose components and attach props with children 1`] = `
<div
  class="foo"
>
  <ul>
    <li>
      Bar
    </li>
  </ul>
</div>
`;

exports[`should compose components without children 1`] = `
<div
  class="foo"
>
  <i
    class="icon-bar"
  />
</div>
`;
